--- a/rpm4/MainWindow.xaml
+++ b/rpm4/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:rpm4"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="350" Width="500" ResizeMode="NoResize">
     <Grid>
         <Menu VerticalAlignment="Top" Grid.ColumnSpan="2">
             <MenuItem Header="Файл">
@@ -21,17 +21,24 @@
                 <MenuItem x:Name="miCleanAll" Header="Очистить все поля программы" ToolTip="Эта кнопка очищает все поля программы" ></MenuItem>
             </MenuItem>
         </Menu>
-        <GroupBox Grid.Column="1" Header="GroupBox" Margin="0,20,0,0">
-            <StackPanel Margin="0,10,0,0"/>
+        <GroupBox Header=" Создание треугольника " Margin="0,20,0,0" Grid.ColumnSpan="1" Grid.RowSpan="1">
+            <StackPanel Margin="0,10,0,0">
+                <Label Content="Первая сторона треугольника"/>
+                <TextBox TextWrapping="Wrap" Width="200"/>
+                <Label Content="Вторая сторона треугольника"/>
+                <TextBox TextWrapping="Wrap" Width="200"/>
+                <Label Content="Третья сторона треугольника"/>
+                <TextBox TextWrapping="Wrap" Width="200"/>
+            </StackPanel>
         </GroupBox>
         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button x:Name="btnAbout" Content="О программе" HorizontalAlignment="Center" Margin="10,10,10,10" Click="btnAbout_Click"/>
             <Button x:Name="btnExit" Content="Выход" HorizontalAlignment="Center" Margin="10,10,10,10" Click="btnExit_Click"/>
         </StackPanel>
-        <Canvas Grid.ColumnSpan="2"/>
+        <GroupBox Grid.Column="1" Header="Работа с треугольником" Margin="0,20,0,0" />
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
