--- a/rpm4/MainWindow.xaml
+++ b/rpm4/MainWindow.xaml
@@ -16,26 +16,34 @@
                 </MenuItem>
             </MenuItem>
             <MenuItem Header="Команды">
-                <MenuItem x:Name="miFull" Header="Заполнить" ToolTip="Данная кнопка заполняет таблицу рандомными значениями"  ></MenuItem>
-                <MenuItem x:Name="miCalc" Header="Вычислить" ToolTip="Эта кнопка воспроизводит расчёт по заданию"  ></MenuItem>
+                <MenuItem x:Name="miDouble" Header="Увеличить" ToolTip="Данная кнопка заполняет таблицу рандомными значениями"  ></MenuItem>
+                <MenuItem x:Name="miPer" Header="Расчитать" ToolTip="Эта кнопка воспроизводит расчёт по заданию"  ></MenuItem>
                 <MenuItem x:Name="miCleanAll" Header="Очистить все поля программы" ToolTip="Эта кнопка очищает все поля программы" ></MenuItem>
             </MenuItem>
         </Menu>
         <GroupBox Header=" Создание треугольника " Margin="0,20,0,0" Grid.ColumnSpan="1" Grid.RowSpan="1">
             <StackPanel Margin="0,10,0,0">
                 <Label Content="Первая сторона треугольника"/>
-                <TextBox TextWrapping="Wrap" Width="200"/>
+                <TextBox x:Name="tbASide" TextWrapping="Wrap" Width="200"/>
                 <Label Content="Вторая сторона треугольника"/>
-                <TextBox TextWrapping="Wrap" Width="200"/>
+                <TextBox x:Name="tbBSide" TextWrapping="Wrap" Width="200"/>
                 <Label Content="Третья сторона треугольника"/>
-                <TextBox TextWrapping="Wrap" Width="200"/>
+                <TextBox x:Name="tbCSide" TextWrapping="Wrap" Width="200"/>
             </StackPanel>
         </GroupBox>
         <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button x:Name="btnAbout" Content="О программе" HorizontalAlignment="Center" Margin="10,10,10,10" Click="btnAbout_Click"/>
             <Button x:Name="btnExit" Content="Выход" HorizontalAlignment="Center" Margin="10,10,10,10" Click="btnExit_Click"/>
         </StackPanel>
-        <GroupBox Grid.Column="1" Header="Работа с треугольником" Margin="0,20,0,0" />
+        <GroupBox Grid.Column="1" Header=" Работа с треугольником " Margin="0,20,0,0" >
+            <StackPanel Margin="0,10,0,0">
+                <Label Content="Вычисление периметра"/>
+                <TextBox x:Name="tbPer" TextWrapping="Wrap"  Width="200"/>
+                <Button x:Name="btnPer" Content="Расчитать" Width="200" Click="btnPer_Click"/>
+                <Label Content="Увеличение сторон в два раза" Margin="0,10,0,0"/>
+                <Button x:Name="btnDouble" Content="Расчитать" Width="200"/>
+            </StackPanel>
+        </GroupBox>
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
